--- a/planner/bspline_opt/CMakeLists.txt
+++ b/planner/bspline_opt/CMakeLists.txt
@@ -4,6 +4,8 @@ ADD_COMPILE_OPTIONS(-std=c++11 )
 ADD_COMPILE_OPTIONS(-std=c++14 )
 find_package(Eigen3 REQUIRED)
 find_package(PCL 1.7 REQUIRED)
+find_package(nlopt REQUIRED)
+
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
@@ -11,13 +13,13 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   visualization_msgs
   cv_bridge
-  nlopt
   plan_env
 )
 
+
 catkin_package(
  INCLUDE_DIRS include
- LIBRARIES bspline_opt
+ LIBRARIES bspline_opt nlopt
  CATKIN_DEPENDS plan_env
 #  DEPENDS system_lib
 )
@@ -28,13 +30,16 @@ include_directories(
     ${catkin_INCLUDE_DIRS}
     ${Eigen3_INCLUDE_DIRS} 
     ${PCL_INCLUDE_DIRS}
+    ${PROJECT_SOURCE_DIR}/utils/nlopt/include
 )
+
 
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS} -O3 -Wall")
 
-add_library( bspline_opt 
+add_library(bspline_opt 
     src/bspline_optimizer.cpp 
     )
 target_link_libraries( bspline_opt
     ${catkin_LIBRARIES} 
+    ${PROJECT_SOURCE_DIR}/utils/nlopt/lib
     )  
