--- a/planner/bspline/CMakeLists.txt
+++ b/planner/bspline/CMakeLists.txt
@@ -37,3 +37,14 @@ add_library( bspline
 target_link_libraries( bspline
     ${catkin_LIBRARIES} 
     )  
+
+install(TARGETS bspline
+  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
+install(DIRECTORY include/${PROJECT_NAME}/
+  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+  PATTERN ".svn" EXCLUDE
+)
