--- a/planner/bspline_opt/CMakeLists.txt
+++ b/planner/bspline_opt/CMakeLists.txt
@@ -4,8 +4,6 @@ ADD_COMPILE_OPTIONS(-std=c++11 )
 ADD_COMPILE_OPTIONS(-std=c++14 )
 find_package(Eigen3 REQUIRED)
 find_package(PCL 1.7 REQUIRED)
-find_package(nlopt REQUIRED)
-
 
 find_package(catkin REQUIRED COMPONENTS
   roscpp
@@ -14,13 +12,14 @@ find_package(catkin REQUIRED COMPONENTS
   visualization_msgs
   cv_bridge
   plan_env
+  nlopt
 )
 
 
 catkin_package(
  INCLUDE_DIRS include
- LIBRARIES bspline_opt nlopt
- CATKIN_DEPENDS plan_env
+ LIBRARIES bspline_opt
+ CATKIN_DEPENDS plan_env nlopt
 #  DEPENDS system_lib
 )
 
@@ -30,28 +29,14 @@ include_directories(
     ${catkin_INCLUDE_DIRS}
     ${Eigen3_INCLUDE_DIRS} 
     ${PCL_INCLUDE_DIRS}
-    #${PROJECT_SOURCE_DIR}/utils/nlopt/include
 )
 
 
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS} -O3 -Wall")
 
 add_library(bspline_opt 
-    src/bspline_optimizer.cpp 
+    src/bspline_optimizer.cpp
     )
 target_link_libraries( bspline_opt
-    ${catkin_LIBRARIES} 
-    #${PROJECT_SOURCE_DIR}/utils/nlopt/lib
+    ${catkin_LIBRARIES}
     )  
-
-
-install(TARGETS bspline_opt
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-)
-
-install(DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-  PATTERN ".svn" EXCLUDE
-)
