--- a/planner/bspline_opt/package.xml
+++ b/planner/bspline_opt/package.xml
@@ -53,14 +53,21 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>plan_env</build_depend>
+  <build_depend>nlopt</build_depend>
+
+
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>plan_env</build_export_depend>
+  <build_export_depend>nlopt</build_export_depend>
+
+  
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>plan_env</exec_depend>
+  <exec_depend>nlopt</exec_depend>
 
 
 
