Revert "add traj_server and temporarily disable fast_planner_node"
This reverts commit 5313a20d9ac65f458188c26dfe5c2b0ae16b6b0f.

--- a/planner/plan_manage/CMakeLists.txt
+++ b/planner/plan_manage/CMakeLists.txt
@@ -57,11 +57,10 @@ include_directories(
 
 
 add_executable(planner_node
-  # src/fast_planner_node.cpp 
+  src/fast_planner_node.cpp 
   src/kino_replan_fsm.cpp
   src/topo_replan_fsm.cpp
   src/planner_manager.cpp
-  src/traj_server.cpp
   )
 target_link_libraries(planner_node 
   ${catkin_LIBRARIES}
